# luis

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
include/: buffer.h  geometry.h  glfwpointer.h  gui.h  mesh.h  ptable.h  shader.h  trajectory.h
src/: geometry.cpp  gui.cpp  main.cpp  mesh.cpp  ptable.cpp  shader.cpp  trajectory.cpp
